--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h2 class="subtitulo2"><span class="subp">Programador</span><span>Frontend</span> </h2>
                     <div class="linea"></div>
                     <p class="texto">Soy una persona apasionada por la tecnología, busco un puesto de desarrollador web que me permita demostrar mis habilidades y expresar mi creatividad, cuento con experiencia en HTML, CSS, c#, java , Mi objetivo principal es desarrollar Aplicaciones WEB implementando nuevas tecnologías</p>
-                    <a  class="btn " href="./doc/t.pdf" download="Alex Front End.pdf" id="micv">Descargar CV</a>
+                    <a  class="btn " href="./doc/Alex Front End.pdf" download="Alex Front End.pdf" id="micv">Descargar CV</a>
                
                  
                 </div>
